GPC/tests/examples/fail/wrongReturnType.gpc


int GPRM::Test::wrongReturnType() {
    return false;
 }
